# pactole

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint.yaml  pages.yaml  release.yaml  sync.yaml  test.yaml
docs/: README.md  developer_overview.md  environment.md  install.md  overview.md  usage.md
docs/api/: README.md  combinations.combination.md  combinations.eurodreams_combination.md  combinations.euromillions_combination.md  combinations.lottery_combination.md  combinations.md  utils.days.md  utils.md
docs/api/combinations/: combination.md  compound_combination.md  eurodreams_combination.md  euromillions_combination.md  index.md  lottery_combination.md
docs/api/data/: base_parser.md  base_provider.md  base_resolver.md  index.md  models.md
docs/api/lottery/: base_lottery.md  eurodreams.md  euromillions.md  index.md
docs/api/utils/: cache.md  days.md  file.md  index.md  system.md  timeout.md  types.md
docs/usage/: README.md  combinations.md  lotteries.md
src/pactole/: __init__.py  main.py
src/pactole/combinations/: __init__.py  combination.py  compound_combination.py  eurodreams_combination.py  euromillions_combination.py  lottery_combination.py
src/pactole/data/: __init__.py  base_parser.py  base_provider.py  base_resolver.py  models.py
src/pactole/lottery/: __init__.py  base_lottery.py  eurodreams.py  euromillions.py
src/scripts/: __init__.py  generate_docs.py
tests/: __init__.py  conftest.py  test_main.py
tests/combinations/: __init__.py  test_bound_combination.py  test_combination.py  test_compound_combination.py  test_eurodreams_combination.py  test_euromillions_combination.py  test_lottery_combination.py
tests/data/: __init__.py  test_base_parser.py  test_base_provider.py  test_base_resolver.py  test_models.py
tests/lottery/: __init__.py  test_base_lottery.py  test_eurodreams.py  test_euromillions.py
tests/utils/: test_draw_days.py  test_file.py  test_file_cache.py  test_file_class.py  test_memory_cache.py  test_system.py  test_timeout.py  test_timeout_cache.py  test_types.py  test_weekday.py
(+12 files in other folders)
