[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactole"
version = "0.2.0"
description = "A library for managing lottery results."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cerbernetix/pactole"
"Bug Tracker" = "https://github.com/cerbernetix/pactole/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
lint = ["ruff", "pylint"]
test = ["pytest-cov", "pytest"]
doc = [
    "handsdown>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pactole"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
disable = [
    "C0302", # (too-many-lines)
    "R0801", # (duplicate-code)
    "R0902", # (too-many-instance-attributes)
    "R0903", # (too-few-public-methods)
    "R0904", # (too-many-public-methods)
    "R0911", # (too-many-return-statements)
    "R0913", # (too-many-arguments)
    "R0914", # (too-many-locals)
    "R0917", # (too-many-positional-arguments)
    "W0511", # (fixme)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-many-lines",
    "duplicate-code",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "fixme",
]

[tool.pytest.ini_options]
addopts = ["-ra", "-q"]
testpaths = ["tests/"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/pactole"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = ["src/pactole"]
tests = ["tests/"]
